--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<style>
+
+
+			.btn {
+		  background-color: rgb(131, 131, 131);
+		  border: none; 
+		  color: white; 
+		 
+		  font-size: 16px;
+		  cursor: pointer; 
+		 
+		  align-items: center;
+			
+		}
+		
+		
+		.btn:hover {
+		  background-color: rgb(184, 41, 250);
+		}
+		
+		.btnP{
+		
+			align-items: center;
+			text-align: center;
+		
+			
+		}
+
+	  
+		</style>	
 	</head>
 	<body>
 
@@ -37,6 +67,11 @@
 							<p>Self-motivated Web Developer with high level of experience working on multiple projects. Passionate and hardworking with penchant for meeting deadlines. Interested in role with company promoting best practices and offering diverse customer projects. </p>
 							<p>Practiced troubleshooter with excellent diagnostics and repair abilities, strong attention to detail and methodical approach. Boosts system performance by thoroughly evaluating and correcting different hardware and software issues.</p>
 						</div>
+						<div class="btnP">
+							<button class="btn" onClick="location.href='apps.html'"><i class="fa fa-android"></i> My Apps</button>
+						  </div>
+						  <h1></h1>
+						  <h1></h1>
 					</section>
 
 				<!-- Two -->
