--- a/apps.html
+++ b/apps.html
@@ -59,7 +59,7 @@
 						<header>
 							<h2>My Apps</h2>
 							<a href="http://www.mediafire.com/file/t9k79txaohz18op/Cov-Track-v2.apk/file">Cov Track</a><span style="color: antiquewhite;" > Covid-19 Accurate cases</span> </br>
-							<a href="http://www.mediafire.com/file/3l0b19cxszxvh0x/IgFy.apk/file">IgFy</a><span style="color: antiquewhite;" > For downloading instagram vides</span>
+							<a href="http://www.mediafire.com/file/3l0b19cxszxvh0x/IgFy.apk/file">IgFy</a><span style="color: antiquewhite;" > For downloading instagram videos</span>
 
 						</header>
 
