--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<h2>Picture Gallery</h2>
 							
 						</header>
-						<div class="content">
+<!-- 						<div class="content">
 							<div class="gallery">
 								<div>
 									<div class="image fit flush">
@@ -104,7 +104,9 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
+						<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-fdbac00e-f1d6-4896-9776-ddb2e5fc4f8e"></div>
 						<header class="special">
 							<h2>Contact</h2>
 							
