--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2">
 						<header>
-							<h2>Picture Gallery</h2>
+							<h2>Instagram Feed</h2>
 							
 						</header>
 <!-- 						<div class="content">
