--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 			</header>
 
 		<!-- Main -->
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-bb8c9f4d-1116-461f-b11a-b9bdd911ae19"></div>
 			<section id="main">
 				<div class="inner">
 
