--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://twitter.com/jibinkoshy07" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/98EC70" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://wa.me/918975554126" class="icon fa-whatsapp"><span class="label">What's app</span></a></li>
 						<li><a href="https://instagram.com/jibu.psy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto: jibinkoshy07@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
